forgot to fix tips of nav flags getting clipped

--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ nav#header_nav>ul li a{
 }
 
 nav#header_nav>ul li a div.background{
-	height: 170px;
+	height: 172px;
 	z-index: 0;
 	display: block;
 	position: relative;
